--- a/noctis_viola.toml
+++ b/noctis_viola.toml
@@ -1,25 +1,27 @@
 # Port of Noctis Viola from VSCode
 
+##################### UI elements ############################
 'ui.selection' = { bg = "jagger" }
 
 'ui.background' = { fg = "foreground", bg = "background" } # Default background color.
 'ui.background.separator' = { fg = "red", bg = "red" }
-# Window border between splits.
 
-
-'ui.cursor' = { bg = "jagger" } # Fallback cursor colour, non-primary cursors when there are multiple (shift-c).
-# 'ui.cursor.primary' = { bg = "selection-background" }      # The primary cursor when there are multiple (shift-c).
-'ui.cursor.insert' = { bg = "jagger" } # The cursor in insert mode (i).
+'ui.cursor.primary' = { bg = "function-name-fg", fg = "#171d1e" }
+'ui.cursor.insert' = { bg = "text", fg = "green" } # The cursor in insert mode (i).
 'ui.cursor.select' = { bg = "jagger" } # The cursor in select mode (v).
 'ui.cursor.match' = { bg = "ce-soir", modifiers = [
-    "bold",
+  "bold",
 ] } # The matching parentheses of that under the cursor.
 
-
+# Line numbers
 'ui.linenr' = { fg = "line-number-fg" }
 'ui.linenr.selected' = { fg = "lilac-bush" }
 
+# Inlay hints
 'ui.virtual.inlay-hint' = { fg = "east-side", modifiers = ["dim"] }
+
+# Popups 
+'ui.popup' = { bg = "popup-background" }
 
 ########## Syntax highlighting ##########
 'type' = { fg = "copper" }
@@ -38,7 +40,6 @@
 'comment.block' = {}                                  # Block comments, like /* this */ in some languages.
 'comment.block.documentation' = {}                    # Doc comments, e.g '///' in rust.
 
-
 'keyword' = { fg = "pale-violet-red" }
 'keyword.storage.type' = { fg = "pale-violet-red" }
 'keyword.storage.modifier' = { fg = "pale-violet-red" }
@@ -54,7 +55,7 @@
 'punctuation.bracket.type_arguments' = { fg = 'text' }
 
 
-'namespace' = { fg = "namespace-fg" } # * Namespace keyword in java, C#, etc.
+'namespace' = { fg = "light-blue" } # * Namespace keyword in java, C#, etc.
 
 'string' = { fg = "string-fg" }
 
@@ -66,14 +67,14 @@
 'diff.delta' = { fg = "macaroni-and-cheese" }
 
 # Gutter area errors and warnings
-# 'info' = { fg = "magenta" }
+'info' = { fg = "magenta" }
 'warning' = { fg = "twine" }
 'error' = { fg = "cinnabar" }
-
+'hint' = { fg = "light-blue" }
 # Editing area errors and warnings
-#'diagnostic' = { fg = 'magenta'} 
-#'diagnostic.hint' = { fg = "magenta" }
-#'diagnostic.info' = { fg = "green" }
+#'diagnostic' = { fg = 'cyan' }
+# 'diagnostic.hint' = { fg = "magenta", bg = "red" }
+'diagnostic.info' = { fg = "green" }
 'diagnostic.warning' = { fg = "macaroni-and-cheese", underline = { style = "curl" } }
 'diagnostic.error' = { fg = "cinnabar", underline = { style = "curl" } }
 
@@ -118,6 +119,9 @@ lilac-bush = "#996BC7"
 orange-keyword-fg = "#E66533"
 function-name-fg = "#16A3B6"
 brackets-fg = "#CCBFD9"
-namespace-fg = "#49d6e9"
+light-blue = "#49d6e9"
 string-fg = "#49E9A6"
+# light-blue = "#49D6E9"
 # matchers #8767A8
+
+popup-background = "#462d5d"
